--- a/index.html
+++ b/index.html
@@ -18,5 +18,15 @@
     <br>
     <br>
    </div>
+   <br>
+   <br>
+   <div class="operation">
+    <h1 class="letter">รูปเล่ม</h1>
+    <h1 class="letter">Source code</h1>
+    <a href="https://github.com/watchirapong/SmartFaucet">
+       <img src="img/github-logo.png"> 
+    </a>
+    
+   </div>
 </body>
 </html>
