--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
    <br>
    <div class="operation">
     <h1 class="letter">รูปเล่ม</h1>
+    <a href ="www.google.com" >
+        <img src="img/1.png">
+    </a>
     <h1 class="letter">Source code</h1>
     <a href="https://github.com/watchirapong/SmartFaucet">
        <img src="img/github-logo.png"> 
     </a>
-    
    </div>
 </body>
 </html>
