--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
    <br>
    <div class="operation">
     <h1 class="letter">รูปเล่ม</h1>
-    <a href ="www.google.com" >
-        <img src="img/1.png">
+    <a href ="https://drive.google.com/file/d/1vD0Hcy6PEFyp699mYOrmIo6tTq86U4eQ/view?usp=sharing" >
+        <img id="picture"src="img/1.png">
     </a>
     <h1 class="letter">Source code</h1>
     <a href="https://github.com/watchirapong/SmartFaucet">
-       <img src="img/github-logo.png"> 
+       <img id= "sourcecode"src="img/github-logo.png" > 
     </a>
    </div>
 </body>
